--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background: #F5E9E2;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,84 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.mainContainer {
+  width: 100%;
+  min-height: 100vh;
+  background: #F5E9E2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  align-items: center;
+  padding: 0 10rem;
+}
+
+.mainContainer .box {
+  text-align: center;
+  padding-bottom: 10px;
+  transition: .3s ease-in-out;
+}
+
+.box:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  transform: scale(1.1);
+}
+
+.box:hover .image {
+  border-radius: 50%;
+}
+
+.mainContainer .card {
+  padding: 15px 15px 0;
+}
+
+.card .image {
+  width: 90%;
+  height: 300px;
+  object-fit: cover;
+  background: #f9f9f9;
+  margin: 10px auto 25px;
+  position: relative;
+  /* border-radius: 50%; */
+}
+
+.btn {
+  width: 50%;
+  padding: 12px 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F5E9E2;
+  border-color: #23395B;
+  border-radius: 15px;
+}
+
+.btn:hover {
+  background-color: #23395B;
+  color: white;
+}
+
+@media screen and (max-width: 998px) {
+  .mainContainer {
+    padding: 0 3rem;
+  }
+
+  .card .image {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:800px) {
+  .mainContainer {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 5rem 3rem;
+  }
+}
+
+@media screen and (max-width:500px) {
+  .mainContainer {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 5rem 2rem;
+  }
+
 }
