--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -38,10 +38,10 @@ body {
   padding: .25rem;
 }
 
-.nav li.active {
-  background-color: #555;
+.active {
+  background-color: #3e65a2;
 }
 
 .nav li:hover {
-  background-color: #777;
+  background-color: #5b83c0;
 }
