--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Koh+Santepheap&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ultra&display=swap');
+
+$bg-color: #F5E9E2;
+$dark-blue: #23395B;
 
 * {
   box-sizing: border-box;
@@ -8,15 +11,16 @@ body {
   margin: 0;
 }
 
-//HEADER-NAVIGATION
+//**********HEADER-NAVIGATION**********
 
 .logo {
-  font-family: 'Koh Santepheap', serif;;
+  font-family: "Ultra", serif;
+  font-style: normal;
   font-size: 2rem;
 }
 
 .nav {
-  background-color: #23395B;
+  background-color: $dark-blue;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -52,10 +56,10 @@ body {
 }
 
 
-//FOOTER
+//**********FOOTER**********
 
 .footer {
-  background-color: #23395B;
+  background-color: $dark-blue;
   color: white;
   display: flex;
   justify-content: space-evenly;
@@ -77,3 +81,165 @@ body {
   gap: 20px;
 }
 
+
+h1{
+  font-family: "Ultra", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+}
+
+
+//**********MAIN-CONTAINERS**********
+
+.mainContainer {
+  width: 100%;
+  min-height: 100vh;
+  background: $bg-color;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  align-items: center;
+  padding: 2rem 10rem;
+}
+
+.mainContainer .box {
+  text-align: center;
+  padding-bottom: 10px;
+  transition: .3s ease-in-out;
+  background-color: lighten($bg-color, 2%);
+  border-radius: 2%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.box:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  transform: scale(1.1);
+}
+
+.mainContainer .card {
+  padding: 15px 15px 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card .image {
+  width: 90%;
+  height: 300px;
+  object-fit: cover;
+  background: #f9f9f9;
+  margin: 10px auto 25px;
+  position: relative;
+  border-radius: 50%;
+}
+
+//**********PRODUCT-CONTAINERS**********
+
+.prodContainer{
+  width: 100%;
+  min-height: 100vh;
+  background: $bg-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 20rem;
+}
+
+.prodContainer .prodBox {
+  padding-bottom: 10px;
+  transition: .3s ease-in-out;
+  background-color: lighten($bg-color, 2%);
+  border-radius: 2%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  width: 80%;
+}
+
+.prodContainer .prodCard {
+  padding: 15px 15px 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.prodCard .image {
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  background: #f9f9f9;
+  margin: 10px auto 25px;
+  position: relative;
+  // border-radius: 50%;
+}
+
+.prodCard .tags{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+//**********BUTTONS**********
+
+.btn {
+  width: 50%;
+  padding: 12px 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: $bg-color;
+  border-color: $dark-blue;
+  border-radius: 15px;
+}
+
+.btn:hover {
+  background-color: $dark-blue;
+  color: white;
+}
+
+.btn-wrap{
+  text-align: center;
+}
+
+
+//**********SCREEN SIZES**********
+@media screen and (max-width: 1200px) {
+  .prodContainer {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  .mainContainer {
+    padding: 0 3rem;
+  }
+
+  .card .image {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:800px) {
+  .mainContainer {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 5rem 3rem;
+  }
+}
+
+@media screen and (max-width:500px) {
+  .mainContainer {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 5rem 2rem;
+  }
+  .prodContainer {
+    padding: 0;
+  }
+  .logo{
+    font-size: 1.3rem;
+  }
+  form {
+    width: 300px;
+  }
+}
