--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 
 $bg-color: #F5E9E2;
 $dark-blue: #23395B;
+$light: white;
 
 * {
   box-sizing: border-box;
@@ -21,7 +22,7 @@ body {
 
 .nav {
   background-color: $dark-blue;
-  color: white;
+  color: $light;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -63,7 +64,7 @@ body {
 
 .footer {
   background-color: $dark-blue;
-  color: white;
+  color: $light;
   display: flex;
   justify-content: space-evenly;
   align-items: stretch;
@@ -74,7 +75,7 @@ body {
 .item3,
 .item4,
 .item5 {
-  color: white;
+  color: $light;
 }
 
 .social-icons {
@@ -199,7 +200,7 @@ h1{
 
 .btn:hover, .checkout-btn:hover {
   background-color: $dark-blue;
-  color: white;
+  color: $light;
 }
 
 .btn-wrap{
@@ -212,6 +213,54 @@ h1{
   background-color: $bg-color;
   border-color: $dark-blue;
   border-radius: 15px;
+}
+
+//**********SEARCHBAR**********
+.input-wrapper {
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  height: 2rem;
+  padding: 0 5px;
+  box-shadow: 0px 0px 2px #ddd;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+}
+.nav input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  width: 100%;
+  font-size: 1rem;
+  margin-left: 5px;
+}
+.nav input:focus{
+  outline: none;
+}
+#search{
+  color: $dark-blue;
+}
+.results-list{
+  color: black;
+  background-color: $light;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  box-shadow: 0px 0px 2px #ddd;
+  border-radius: 5px;
+  margin-top: 40px;
+  max-height: 200px;
+  overflow-y: scroll;
+  width: 100%;
+  position: absolute;
+}
+.search-wrapper{
+  display: flex;
+  position: relative;
+}
+.results-list a:hover{
+  background-color: #5b83c0;
 }
 
 
