--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,6 +40,7 @@ body {
   display: inline;
   display: flex;
   gap: 1rem;
+  font-size: 1.3rem;
 }
 
 .nav a {
@@ -72,9 +73,7 @@ body {
   padding: 1rem 1rem;
 }
 
-.item3,
-.item4,
-.item5 {
+.social{
   color: $light;
 }
 
@@ -83,6 +82,7 @@ body {
   justify-content: center;
   padding-top: 10px;
   gap: 20px;
+  font-size: 1.5rem;
 }
 
 
@@ -102,7 +102,7 @@ h1{
   background: $bg-color;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
+  gap: 40px 25px;
   align-items: center;
   padding: 2rem 10rem;
 }
@@ -183,7 +183,20 @@ h1{
 .prodCard .tags{
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.3rem;
+}
+.newprice, .oldprice, .price{
+  font-size: 1rem;
+}
+.newprice{
+  font-weight:bold;
+}
+.oldprice{
+  text-decoration: line-through;
+}
+.discount{
+  font-size: 1.4rem;
+  color: red;
 }
 
 //**********BUTTONS**********
@@ -216,6 +229,7 @@ h1{
 }
 
 //**********SEARCHBAR**********
+
 .input-wrapper {
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -249,7 +263,7 @@ h1{
   position: fixed;
   box-shadow: 0px 0px 2px #ddd;
   border-radius: 5px;
-  margin-top: 40px;
+  margin-top: 55px;
   max-height: 200px;
   overflow-y: scroll;
   width: 100%;
@@ -267,15 +281,21 @@ h1{
 //**********SCREEN SIZES**********
 @media screen and (max-width: 1200px) {
   .prodContainer {
-    padding: 0 3rem;
+    padding: 1rem 10rem;
+  }
+  .mainContainer{
+    padding: 2rem 5rem;
   }
 }
 
 @media screen and (max-width: 998px) {
   .mainContainer {
-    padding: 0 3rem;
+    padding: 2rem 3rem;
+    gap: 40px 20px;
   }
-
+  .prodContainer {
+    padding: 1rem 3rem;
+  }
   .card .image {
     width: 90%;
   }
@@ -284,22 +304,32 @@ h1{
 @media screen and (max-width:800px) {
   .mainContainer {
     grid-template-columns: repeat(2, 1fr);
-    padding: 5rem 3rem;
+    padding: 2rem 2rem;
+    gap: 40px 20px;
+  }
+  .prodContainer {
+    padding: 1rem 3rem;
   }
 }
 
 @media screen and (max-width:500px) {
   .mainContainer {
     grid-template-columns: repeat(1, 1fr);
-    padding: 5rem 2rem;
+    padding: 2rem 1rem;
   }
   .prodContainer {
-    padding: 0;
+    padding: 1rem;
   }
   .logo{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+  }
+  .nav ul{
+    font-size: 1rem;;
   }
   form {
-    width: 300px;
+    width: 340px;
+  }
+  .copyright{
+    font-size: 0.8rem;
   }
 }
