--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -185,7 +185,7 @@ h1{
   align-items: center;
   gap: 0.3rem;
 }
-.newprice, .oldprice, .price{
+.newprice, .oldprice{
   font-size: 1rem;
 }
 .newprice{
