--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -93,68 +93,27 @@ h1 {
   text-align: center;
 }
 
-//**********MAIN-CONTAINERS**********
+//**********CONTAINERS**********
+
 .mainContainer a {
   text-decoration: none;
   color: black;
 }
-.mainContainer {
-  width: 100%;
-  min-height: 100vh;
-  background: $bg-color;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px 25px;
-  align-items: center;
-  padding: 2rem 10rem;
-}
-
-.mainContainer .box {
-  text-align: center;
-  padding-bottom: 10px;
-  transition: 0.3s ease-in-out;
-  background-color: lighten($bg-color, 2%);
-  border-radius: 2%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  height: 100%;
-}
-
-.box:hover {
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-  transform: scale(1.1);
-}
-
-.mainContainer .card {
-  padding: 15px 15px 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.card .image {
-  width: 90%;
-  height: 300px;
-  object-fit: cover;
-  background: $grey;
-  margin: 10px auto 25px;
-  position: relative;
-  border-radius: 50%;
-}
-
-//**********PRODUCT-CONTAINERS**********
-
+.mainContainer,
 .prodContainer {
   width: 100%;
   min-height: 100vh;
   background: $bg-color;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 2rem 20rem;
+}
+.mainContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px 25px;
+  padding: 2rem 10rem;
 }
 
+.mainContainer .box,
 .prodContainer .prodBox {
   padding-bottom: 10px;
   transition: 0.3s ease-in-out;
@@ -162,25 +121,54 @@ h1 {
   border-radius: 2%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   height: 100%;
-  width: 80%;
+}
+.mainContainer .box {
+  text-align: center;
 }
 
+.box:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  transform: scale(1.1);
+}
+
+.mainContainer .card,
 .prodContainer .prodCard {
   padding: 15px 15px 0;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
+.card .image,
 .prodCard .image {
   width: 100%;
-  height: 50vh;
+  height: 300px;
   object-fit: cover;
   background: $grey;
   margin: 10px auto 25px;
   position: relative;
-  // border-radius: 50%;
+  border-radius: 25%;
+}
+
+.prodContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 20rem;
+}
+
+.prodContainer .prodBox {
+  width: 80%;
+}
+
+.prodContainer .prodCard {
+  align-items: stretch;
+}
+
+.prodCard .image {
+  height: 50vh;
+  border-radius: 0;
 }
 
 .prodCard .tags {
@@ -350,6 +338,7 @@ h1 {
 }
 
 //**********SCREEN SIZES**********
+
 @media screen and (max-width: 1200px) {
   .prodContainer {
     padding: 1rem 10rem;
